[gd_scene load_steps=7 format=2]

[ext_resource path="res://Montreal-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://elements/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://elements/GoldCoin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 11
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 75
outline_size = 3
outline_color = Color( 0.313726, 0.270588, 0.2, 1 )
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1700.0
margin_bottom = 1000.0
color = Color( 0.164063, 0.164063, 0.164063, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 240.0
margin_top = 100.0
margin_right = 1700.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
text = "PUZZ MINES P"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileLeft" type="Label" parent="."]
margin_left = 240.0
margin_top = 330.0
margin_right = 284.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 2 )
text = "<"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileRight" type="Label" parent="."]
margin_left = 390.0
margin_top = 330.0
margin_right = 708.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 2 )
text = ">  File: A"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSetLeft" type="Label" parent="."]
margin_left = 240.0
margin_top = 440.0
margin_right = 284.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 2 )
text = "<"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSetRight" type="Label" parent="."]
margin_left = 390.0
margin_top = 440.0
margin_right = 774.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 2 )
text = ">  Level Set: TUTORIAL"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelNumberLeft" type="Label" parent="."]
margin_left = 240.0
margin_top = 550.0
margin_right = 284.0
margin_bottom = 650.0
custom_fonts/font = SubResource( 2 )
text = "<"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelNumberRight" type="Label" parent="."]
margin_left = 390.0
margin_top = 550.0
margin_right = 774.0
margin_bottom = 650.0
custom_fonts/font = SubResource( 2 )
text = ">  Level Number: 1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayRight" type="Label" parent="."]
margin_left = 390.0
margin_top = 660.0
margin_right = 774.0
margin_bottom = 760.0
custom_fonts/font = SubResource( 2 )
text = ">  Play"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitRight" type="Label" parent="."]
margin_left = 390.0
margin_top = 770.0
margin_right = 774.0
margin_bottom = 870.0
custom_fonts/font = SubResource( 2 )
text = ">  Exit"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 340, 380 )
scale = Vector2( 1.5, 1.5 )

[node name="GoldCoin" parent="." instance=ExtResource( 3 )]
position = Vector2( 1360, -80 )
scale = Vector2( 1.5, 1.5 )
